# swagger_server/models/__init__.py
@@ -5,3 +5,5 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.content_filter import ContentFilter
 from swagger_server.models.content_filter_info import ContentFilterInfo
+from swagger_server.models.content_filter_info_put import ContentFilterInfoPUT
+from swagger_server.models.purify_message import PurifyMessage
